--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Trabajando remotamente</h1>
+    <div class="Lista de commits">
+        <p>1</p>
+    </div>
 </body>
 </html>
