--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Trabajando remotamente</h1>
     <div class="Lista de commits">
         <p>1</p>
+        <img src="profile.jpeg"/>
     </div>
 </body>
 </html>
